# advent-of-code-2023

./: .gitignore  README.md  aoc2023.cabal
app/: CommonFuncs.hs  Funcs.hs  FuncsDay10.hs  FuncsDay11.hs  FuncsDay12.hs  FuncsDay13.hs  FuncsDay14.hs  FuncsDay15.hs  FuncsDay2.hs  FuncsDay3.hs  FuncsDay4.hs  FuncsDay5.hs  FuncsDay6.hs  FuncsDay7.hs  FuncsDay7Answer2.hs  FuncsDay8.hs  FuncsDay9.hs  Main.hs  Tests.hs  TestsDay10.hs  TestsDay11.hs  TestsDay12.hs  TestsDay13.hs  TestsDay14.hs  TestsDay15.hs  TestsGeneral.hs
