cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             daniele2408
maintainer:         daniele.camp24@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, HUnit ^>=1.6.2.0, split, containers ^>=0.6.5.1
    hs-source-dirs:   app
    default-language: Haskell2010
    exposed-modules: 
        Tests, Funcs, FuncsDay2, FuncsDays3, CommonFuncs
    build-depends:
        HUnit
